crates/bpl/tests/snapshots/test__boogie__Test__test0__BadQuantifier.snap
---
source: crates/bpl/tests/test.rs
assertion_line: 41
expression: snapshot_report
---
[Parse Error]
error: unexpected token `int`; expected `<`, `{`, or identifier
  ┌─ ../../vendor/boogie/Test/test0/BadQuantifier.bpl:5:15
  │
5 │ axiom (forall int x :: f(x) <== x >= 0);
  │               ^^^

[Input - ../../vendor/boogie/Test/test0/BadQuantifier.bpl]
// RUN: %boogie -noVerify "%s" > "%t"
// RUN: %diff "%s.expect" "%t"

function f(int) returns (bool);
axiom (forall int x :: f(x) <== x >= 0);
